log in with facebook is now possible

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="QdO0SmI0"></script>
+
     <!-- BOOTSTRAP -->
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
 
