updated page preview!

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./windsurf-silhouette.png" />
+    <title>Windsurf Norge</title>
+    <meta property="og:title" content="Windsurf Norge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta 
+      name="description" 
+      content="Finn steder å windsurfe og del dine favoritt spotter med andre.
+        Windsurfnorge er det perfektet sted å gå når du skal bli kjent med nye windsurfe områder."/>
+    <meta 
+      property="og:description" 
+      content="Finn steder å windsurfe og del dine favoritt spotter med andre.
+        Windsurfnorge er det perfektet sted å gå når du skal bli kjent med nye windsurfe områder."/>
+    <meta property="og:image" content="background2square-min.jpg" />
+    <meta property="og:url" content="https://windsurfnorge.no" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -46,7 +54,6 @@
     <script>var Alert = ReactBootstrap.Alert;</script>
 
     
-    <title>Windsurf Norge</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
